# egnyte-client-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_SETUP.md  EGNYTE_PORTAL_SETUP.md  Egnytemail.md  INSTALL.md  INSTALL_FIX.md  LICENSE  MANIFEST.in  MANUAL_AUTH_GUIDE.md  Makefile  NGROK_HOSTNAME_ERROR.md  NGROK_SETUP.md  OAUTH_QUICK_FIX.md  OAUTH_SETUP.md  OAUTH_TROUBLESHOOTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  VENV_SETUP.md  codereview20260211-214557.md  egnyte-sync.service  pyproject.toml  requirements.txt  setup.py  test_token_exchange.py
.github/workflows/: ci.yml  security-assessment.yml  security-scan.yml  security.yml
comfyui-landing/: package-lock.json  package.json
comfyui-landing/src/app/: globals.css  layout.tsx  page.tsx
deprecated/egnyte_desktop_gui/: __init__.py  main.py  main_window.py
docs/: development.md  oauth-setup.md
egnyte_desktop/: __init__.py  api_client.py  auth.py  config.py  file_watcher.py  fuse_mount.py  sync_engine.py  sync_service.py  utils.py
egnyte_desktop/cli/: __init__.py  main.py
egnyte_desktop/gui/: main.py  main_window.py
examples/: README.md  egnyte-sync.service
src/: main.rs
src/fs/: api_client.rs  fuse_ops.rs  inode_table.rs  mod.rs
tests/: __init__.py  test_api_client_429.py  test_cli_auth_status.py  test_cli_mount_list.py  test_config_sync_entries.py  test_sync_engine_policy.py
