[package]
name = "egnyte-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
tokio = { version = "1", features = ["full"] }
dashmap = "5.5"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
libc = "0.2"

[lib]
name = "egnyte_fuse"
path = "src/lib.rs"

[[bin]]
name = "egnyte-fuse"
path = "src/main.rs"
